unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/SDO_Community_Course_Enrollment__c.object-meta.xml
<CustomObject>
    <description>What: Represents enrollment of a Contact in a training course. Used to facilitate enrollment flows in a community.
Who: Joe Morse &amp; Community Team</description>
    <label>Course Enrollment</label>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>