unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>Enrolled_User__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce ID of the contact (if any) representing the enrolled user.</inlineHelpText>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>