unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/fields/Current_User_s_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Current_User_s_Enrollment__c</fullName>
    <description>Returns TRUE when the currently logged-in user is the one enrolled in the course. Used to filter list views, such as to &#39;My Courses&#39;</description>
    <formula>Enrolled_User__r.Id = $User.Id</formula>
    <inlineHelpText>Returns TRUE when the currently logged-in user is the one enrolled in the course.</inlineHelpText>
    <label>Current User&#39;s Enrollment</label>
    <type>Checkbox</type>
</CustomField>