unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/fields/Enrolled_User__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User record of the enrollee.</inlineHelpText>
    <label>Enrolled User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an internal, customer, or partner user to enroll.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>