unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SDO_Community_Training_Course_Status</valueSetName>
    </valueSet>
</CustomField>