unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/fields/Training_Course__c.field-meta.xml
<CustomField>
    <fullName>Training_Course__c</fullName>
    <inlineHelpText>Which training course is this enrollment for?</inlineHelpText>
    <label>Training Course</label>
    <referenceTo>SDO_Community_Training_Course__c</referenceTo>
    <relationshipLabel>Enrollment</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>