unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Training_Course__c</columns>
    <columns>Enrolled_User__c</columns>
    <columns>Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>