unpackaged/main/default/objects/SDO_Community_Course_Enrollment__c/listViews/My_Enrollments.listView-meta.xml
<ListView>
    <fullName>My_Enrollments</fullName>
    <columns>NAME</columns>
    <columns>Training_Course__c</columns>
    <columns>Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_s_Enrollment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Enrollments</label>
</ListView>